[package]
name = "teamspeak"
version = "0.1.0-pre"
description = "TeamSpeak Server Query library"
authors = ["Mike Dilger <mike@optcomp.nz>"]
readme = "README.md"
repository = "https://github.com/mikedilger/teamspeak-rs"
documentation = "https://mikedilger.github.io/teamspeak-rs"
license = "MIT OR Apache-2.0"
keywords = [ "teamspeak", "serverquery" ]

[dependencies]
regex = "0.1"
lazy_static = "0.2"